--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
             <i class="fa-brands fa-css3-alt"></i>
             <i class="fa-brands fa-bootstrap"></i>
             <i class="fa-brands fa-js-square"></i>
+            <i class="fa-brands fa-react"></i>
           </div>
         </div>
       </div><!--/container -->
